# PIE-Airbus-Helicopter

./: .gitignore  LCS_Toutes_Les_Tables.csv  LCS_cluster_assignments.csv  LCS_clustering_report.txt  LCS_final_result.csv  LCS_sim_matrix.csv  LCS_time_aware.py  LLM_Clustering.ipynb  LLM_clustering_v2.ipynb  README.md  expand.py  exploration.ipynb  feature-selection.ipynb  flights_by_cluster_motif.csv  motif.ipynb  pyproject.toml  symbolic.py
Approche_motif/: README.md  clustering.py  find_motifs.py  graph.py  requirements.txt
Approche_motif/results/: motif_network.html  motif_network2.html
Approche_motif/utils/: graph_building_viz.py  motif_finding.py
